Add community rep

--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -492,9 +492,7 @@ contacts; }
 
 # More Wonders
 
-See [ralexanderson.com/blog](https://ralexanderson.com/blog) for more info
-
-<ul>
+<ul style={{ textAlign: "left" }}>
   <li style={{ fontSize: "1px" }}>Tracking open web browser tabs</li>
   <li style={{ fontSize: "1px" }}>React Component Plugins with React.lazy</li>
   <li style={{ fontSize: "1px" }}>React renderer for DMX lighting</li>
@@ -502,6 +500,51 @@ See [ralexanderson.com/blog](https://ralexanderson.com/blog) for more info
 </ul>
 
 ---
+
+# Wonder & Serendipity
+
+> It’s something that is both unexpected and fortunate. It’s what I didn’t even
+> know I was looking for but goes beyond my imagination. We can’t force it; it
+> happens to us and makes us feel alive.
+
+<cite>
+  Henry Zhu - <em>Seeking Serendipity</em>
+</cite>
+
+---
+
+<div
+  style={{
+    display: "flex",
+    flexDirection: "column",
+    height: "100vh",
+    marginTop: "-120px"
+  }}
+>
+  <h1 style={{ marginBottom: "20px" }}>TinkerSynth</h1>
+  <div>
+    <img src={require("../assets/tinkersynth.gif")} />
+  </div>
+  <cite>Josh Comeau</cite>
+</div>
+
+---
+
+<div
+  style={{
+    display: "flex",
+    flexDirection: "column",
+    justifyContent: "space-around",
+    height: "80vh",
+    marginTop: "-120px"
+  }}
+>
+  <h1 style={{ marginBottom: "20px" }}>sarahdrasnerdesign.com</h1>
+  <div>
+    <img src={require("../assets/drasner.gif")} />
+  </div>
+  <cite>Sarah Drasner</cite>
+</div>
 
 ---
 
